[package]
name = "cryptrust"
version = "0.0.1"
edition = "2021"
authors = ["Jianxun Pan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-traits = "0.2.19"
num-bigint = "0.4.6"
sha2 = "0.10.8"

[features]
default = ["ecc", "dh", "aead", "hash"]
check_prime = []
finite_field = []
block_cipher = []
hash = []
key_exchange = []
ecc = ["finite_field"]
dh = ["finite_field", "key_exchange"]
aead = ["block_cipher"]
