[package]
name = "cryptrust"
version = "0.0.1"
edition = "2021"
authors = ["Jianxun Pan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.19", default-features = false}
num-bigint = { version = "0.4.6", default-features = false}
sha2 = "0.10.8"
arrayvec = {version = "0.7", default-features = false}

[features]
default = ["ecc", "dh", "aes"]
std = []
alloc = []
bigint = ["std", "alloc"]
finite_field = []
block_cipher = []
hash = ["std"]
key_exchange = []
ecc = ["finite_field"]
dh = ["finite_field", "key_exchange"]
aead = ["block_cipher", "std"]  # GCM uses Vec
aes = ["block_cipher"]
